# GAMES101

./: .gitignore  CMakeLists.txt
lab0/: CMakeLists.txt  test.cpp
lab1/: CMakeLists.txt  lab1.md.html  main.cpp
lab2/: CMakeLists.txt  lab2.md.html  main.cpp  rasterizer.cpp
lab3/: CMakeLists.txt  lab3.md.html  main.cpp  rasterizer.cpp  rasterizer.hpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  lab5.md.html
lab6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
lab7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Scene.cpp  Scene.hpp
resources/: markdeep.min.js
